--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ matrix:
         - clang
         - gcc
       script:
-        - gcc -o test test.c
+        - gcc -o test CODE.c
+        - gcc -o test heena.c
+        - gcc -o test Asses1.c
+        - gcc -o test palindrome.c
         - ./test
