--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,17 @@
 matrix:
-  include:
-    - language: c
-      sudo: false # only for faster builds
-      compiler:
-        - clang
-        - gcc
-      script:
-        - gcc -o test1 CODE.c
-        - gcc -o test2 heena.c
-        - gcc -o test3 Asses1.c
-        - gcc -o test4 palindrome.c
-        - ./test1
-        - ./test2
-        - ./test3
-        - ./test4
-
-        
+	  include:    
+	    - language: c  
+	      sudo: false # only for faster builds  
+	      compiler:
+	        - clang
+	        - gcc
+	      script:  
+	        - gcc -o heena.c 
+	        - ./heena
+	        - gcc -o Asses1.c
+	        - ./Asses1
+	        - gcc -o CODE.c
+	        - ./CODE
+          - gcc -o palindrome.c
+          - ./palindrome
         
